# hsc-gui

./: .gitignore  README.md  README.th.md
.github/workflows/: release.yml
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  main.rs  scanner.rs
